# QuizSync

./: .gitignore  ColorTheme.md  README.md  docker-compose.yml  phase1.md  render.yaml
DOCS/: RelationalModel.md  SystemDesign.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: auth.py  broadcaster.py  config.py  leaderboard.py  lifecycle.py  main.py  play.py  redis_client.py  rooms.py  scheduler.py  schemas.py  scoring.py  supabase_client.py  worker.py  ws.py
backend/tests/: test_leaderboard.py  test_scoring.py
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  index.css  theme.css
frontend/src/lib/: api.js  supabase.js  useRoomSocket.js
supabase/migrations/: 0001_healthcheck.sql  0002_core_schema.sql  0003_functions.sql
